2004-10-14  Teodor Zlatanov  <tzz@lifelogs.com>

	* spam.el (spam-register-routine): move comment
	(spam-verify-bogofilter): we use 'unknown for the initial
	spam-bogofilter-valid state, not 'never

	* netrc.el (netrc-machine-user-or-password): convenience wrapper
	for netrc-machine

	* nnimap.el (nnimap-open-connection): use
	netrc-machine-user-or-password


2004-10-13  Katsumi Yamaoka  <yamaoka@jpl.org>

	* message.el (message-tokenize-header): Fix 2004-09-06 change
	which used point-min in the wrong place.

2004-10-12  Simon Josefsson  <jas@extundo.com>

	* net/tls.el (tls-certtool-program): New variable.
	(tls-certificate-information): New function, based on
	ssl-certificate-information.

2004-10-12  Katsumi Yamaoka  <yamaoka@jpl.org>

	* compface.el: Move the version of ELisp-based uncompface program
	to the contrib directory because of the copyright problem.

2004-10-12  Reiner Steib  <Reiner.Steib@gmx.de>

	* message.el (message-kill-buffer): Raise the current frame.

2004-10-10  Reiner Steib  <Reiner.Steib@gmx.de>

	* gnus-sum.el: Mention that multibyte characters don't work as marks.

	* gnus.el (message-y-or-n-p): Autoload.

	* pop3.el (pop3-maildrop, pop3-mailhost, pop3-port)
	(pop3-password-required, pop3-authentication-scheme)
	(pop3-leave-mail-on-server): Made customizable.
	(pop3): New custom group.
	(pop3-retr): Remove `sleep-for' statements.
	Suggested by Dave Love <fx@gnu.org>.

	* nnheader.el (nnheader-read-timeout): Explain 1.0 timeout for
	Windows/DOS.

	* imap.el (imap-parse-flag-list, imap-parse-body-extension)
	(imap-parse-body): Fix incorrect use of `assert'.  Suggested by
	Dave Love <fx@gnu.org>.

	* mml.el (mml-minibuffer-read-disposition): Require match.
	Suggested by Dave Love <fx@gnu.org>.

2004-10-11  Reiner Steib  <Reiner.Steib@gmx.de>

	* gnus-group.el (gnus-group-delete-group): Change "\t." to "  " in
	doc string.

2004-10-08  Katsumi Yamaoka  <yamaoka@jpl.org>

	* mm-uu.el (mm-uu-dissect-text-parts): Support all text/* types.
